--- a/flask_project/templates/base.html
+++ b/flask_project/templates/base.html
@@ -22,7 +22,7 @@
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
-                        <li class="nav-item"><a class="nav-link" href="#!">О магазине</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/about">О магазине</a></li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" id="navbarDropdown" href="/" role="button" data-bs-toggle="dropdown" aria-expanded="false">Магазин</a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -33,11 +33,14 @@
                             </ul>
                         </li>
                     </ul>
-                    <form class="d-flex">
+                    <form class="d-flex" action="/checkout" method = 'get'>
                         <button class="btn btn-outline-dark" type="submit">
                             <i class="bi-cart-fill me-1"></i>
-                            Cart
-                            <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
+                            Корзина
+                            <span class="badge bg-dark text-white ms-1 rounded-pill">
+                                {{session.get('order_volume', 0)}}
+
+                            </span>
                         </button>
                     </form>
                 </div>
@@ -47,7 +50,7 @@
                 <li class="nav-item dropdown">
                     <button class="btn btn-bd-light dropdown-toggle" id="bd-versions" data-bs-toggle="dropdown" aria-expanded="false" data-bs-display="static">
                         <span class="d-none d-lg-inline">
-                            {% if current_user.is_authenticated %}
+                           {% if current_user.is_authenticated %}
                                {{ current_user.name }} {{ current_user.surname }}
                                 {% else %}
                             {% endif%}
@@ -74,11 +77,11 @@
             </div>
         </nav>
         <!-- Header-->
-        <header class="bg-dark py-5">
-            <div class="container px-4 px-lg-5 my-5">
+        <header class="bg-dark py-5" >
+            <div class="container px-4 px-lg-5 my-5"><!--<img class="img" src="flask_project/static/img/top.jpeg)">-->
                 <div class="text-center text-white">
-                    <h1 class="display-4 fw-bolder">Shop in style</h1>
-                    <p class="lead fw-normal text-white-50 mb-0">With this shop hompeage template</p>
+                    <h1 class="display-4 fw-bolder">Магазин Шмагазин</h1>
+                    <p class="lead fw-normal text-white-50 mb-0">Магазин атрибутики по волшебному миру</p>
                 </div>
             </div>
         </header>
@@ -88,7 +91,7 @@
         </section>
         <!-- Footer-->
         <footer class="py-5 bg-dark">
-            <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2022</p></div>
+            <div class="container"><p class="m-0 text-center text-white">Магазин Шмагазин - ваш путь в волшебный мир</p></div>
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
