--- a/flask_project/templates/card.html
+++ b/flask_project/templates/card.html
@@ -12,11 +12,25 @@
                         </div>
                         <p class="lead">{{item.description}}</p>
                         <div class="d-flex">
-                            <input class="form-control text-center me-3" id="inputQuantity" type="num" value="1" style="max-width: 3rem" />
-                            <button class="btn btn-outline-dark flex-shrink-0" type="button">
+                            <form action="/add_to_cart"  method="post">
+                            {{ form.quantity(class="form-control text-center me-3", type="number", value="1", min='1', max="100", style="max-width: 5rem") }}
+                            {{form.product_id()}}
+                            {{ form.submit(type="submit", class="btn btn-outline-dark flex-shrink-0") }}
+                            <!--<button class="btn btn-outline-dark flex-shrink-0" type="button">
                                 <i class="bi-cart-fill me-1"></i>
-                                Add to cart
-                            </button>
+                                Добавить в корзину
+                            </button>-->
+                            </form>
+                            {% if current_user.is_authenticated and current_user.role == 1 %}
+                            <div class="ms-1">
+                                <a href="/edit/{{ item.id }}" class="btn btn-warning">
+                                    Изменить
+                                </a>
+                                <a href="/delete/{{ item.id }}" class="btn btn-danger">
+                                    Удалить
+                                </a>
+                            </div>
+                            {% endif %}
                         </div>
                     </div>
                 </div>
